<resources>
    <string name="app_name">RIDE</string>
    <string name="app_logo">LOGO</string>
    <string name="app_login_email">Correo electrónico</string>string>
    <string name="app_login_password">Contraseña</string>string>
    <string name="app_login_register">¿Aún no tienes una cuenta? Registrate</string>string>
    <string name="app_login_enter">ENTRAR</string>
    <string name="app_register_enter">REGISTRARME</string>
    <string name="app_register_login">¿Ya tientes una cuenta? Inicia sesión</string>
    <string name="app_register_name">Nombre completo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_register">RegisterActivity</string>

</resources>
