<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_coffe"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/app_login_email"
        android:inputType="textEmailAddress"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterName" />

    <EditText
        android:id="@+id/editTextRegisterName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/app_register_name"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/app_login_password"
        android:inputType="textPassword"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmail" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="52dp"
        android:text="@string/app_register_enter"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="76dp"
        android:text="@string/app_register_login"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>